[package]
name = "marvim"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
serde = "1.0"
serde_json = "1.0"
json = "0.12.4"
serde_yaml = "0.8"
serde_derive = "1.0"
hmac = "0.11.0"
sha2 = "0.9.5"
hex = "0.4.3"
octocrab = "0.11.0"
lazy_static = "1.4.0"

[patch.crates-io]
hyperx = { git = "https://github.com/nox/hyperx.git", rev="aaf429674c65fc0a5ad602685197f63e469ca77d" }
